# Job-scraper

./: .gitignore  CLAUDE.md  README.md  amazon.py  amazon_jobs.csv  apple.py  apple_jobs.csv  meta.py  nvidia.py  nvidia_jobs.csv  pyproject.toml  scrape.py
.claude/commands/: integrate_new_job_portal.md
.github/workflows/: job-scraper.yml
